--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,343 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Poppins', sans-serif;
+    color: black;
+    width: 100%;
+    margin: auto;
+    padding: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* start */
+.preloader {
+    background-color: #fff;
+    width: 100%;
+    height: 100vh;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.preloader .start {
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70vh;
+    transition: 1s;
+    background: linear-gradient(90deg, #07f79b, #01442a);
+    animation: animate 4s linear;
+    
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes animate {
+    0%{
+        filter: hue-rotate(0deg);
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    15%{
+        filter: hue-rotate(180deg);
+        transform: translateY(0%);
+        opacity: 1;
+    }
+    50%{
+        filter: hue-rotate(360deg);
+        transform: translateY(0%);
+        opacity: 1;
+    }
+    75%{
+        filter: hue-rotate(180deg);
+        transform: translateY(0%);
+        opacity: 1;
+    }
+    100%{
+        filter: hue-rotate(0deg);
+        transform: translateY(-100%);
+        opacity: 0;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.start h6 {
+    margin-top: 30px;
+    font-size: 20px;
 }
+
+.start .brand {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 30px;
+}
+
+/* this part is header */
+
+header {
+    margin-top: 100px;
+}
+
+header .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    padding: auto;
+    font-size: 16px;
+}
+
+header .row .left .nav-item:nth-child(1) .nav-link {
+    border-bottom: 1px solid black;
+}
+ 
+
+header .row .left .nav-item .nav-link:hover {
+    border-bottom: 1px solid black;
+}
+
+header .row .nav-item .nav-link {
+    color: black;
+    padding: 0;
+    margin: 0 15px;
+}
+
+header .row .right{
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+}
+
+header .row .right .nav-item:nth-child(1) .nav-link {
+    font-size: 10px;
+} 
+
+header .row .right .nav-item:nth-child(2) .nav-link {
+    padding: 20px;
+    border: 1px solid black;
+} 
+
+header .row .right .nav-item:nth-child(2) .nav-link:hover {
+    background-color: black;
+    color: white;
+} 
+
+/* message part */
+
+.message {
+    text-align: center;
+}
+
+.message h1 {
+    margin: 100px auto;
+}
+
+/* logo */
+
+.logo img {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.logo h6{
+    font-size: 13px;
+    line-height: 30px;
+}
+
+.logo h4{
+    font-size: 18px;
+}
+
+/* cards */
+
+.cards .card-deck {
+    border: none;
+    width: 100%;
+    margin: 50px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cards .card-deck .card {
+    margin: 0;
+    max-width: 450px;
+    overflow: hidden;
+    border: none;
+    text-align: center;
+}
+
+.cards .card-deck .card img {
+    object-fit: cover;
+    width: 100%;
+    height: 70vh;
+}
+
+.cards .card-deck .card:nth-child(2) img {
+    position: relative;
+    object-fit: cover;
+    width: 300%;
+    left: -450px;
+    z-index: 0;
+}
+
+.cards .card-deck .card .card-body .card-title {
+    font-size: 12px;
+    font-weight: 600;
+}
+
+/* Projects */
+
+.projects {
+    color: white;
+    background-color: #161616;
+    width: 100%;
+    height: 100vh;
+    padding-top: 60px;
+    margin: 0 auto 50px auto;
+    padding: auto;
+}
+
+.projects .container h1 {
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.projects .container .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.projects .container .row div {
+    text-align: center;
+    
+}
+
+/* portfolio */
+
+.portfolio {
+    margin-bottom: 50px;
+}
+
+.portfolio .row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.portfolio .row div {
+    max-width: calc(100%/3);
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+}
+
+.portfolio .row div img {
+    width: 100%;
+    object-fit: cover;
+
+
+}
+
+.portfolio .row div p{
+    margin-top: 20px;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+/* podcasts */
+
+.podcast img {
+    width: 100%;
+    margin: auto;
+}
+
+.podcast .row {
+    width: 100%;
+    margin: 25px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.podcast .row p {
+    font-size: 12px;
+    font-weight: 600;
+}
+
+/* Subscribe */
+
+.subscribe {
+    margin: 0 auto 30px auto;
+}
+
+.subscribe .box {
+    border: 1px solid #161616;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.subscribe .box h6 {
+    max-width: calc(100%/5);
+    border-right: 1px solid #161616;
+    margin: 0;
+    padding: 0 10px;
+}
+
+.subscribe .box .row {
+    max-width: cal(400%/5);
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.subscribe .box .row .contain {
+    padding: 0 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.subscribe .box .row .contain .letter {
+    border: 1px solid #161616;
+    width: 30px;
+    margin-right: 10px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.subscribe .box .row .contain .social {
+    max-width: 100px;
+    font-size: 14px;
+}
+
+/* box-2 */
+
+.subscribe .box-2 {
+    margin: 50px auto;
+    display: flex;
+    align-items: center;
+}
+
+.subscribe .box-2 .col-left {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 10px;
+}
+
+
+.subscribe .box-2 .col-right .row {
+    display: flex;
+    justify-content: flex-end;
+}
+
